refactor: 사용되지 않은 import 삭제 및 경고 문구 수정